Fixed index href

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,11 +24,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-dark clean-navbar">
-        <div class="container"><a class="navbar-brand text-white logo" href="/"><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-white logo" href=https://github.com/perryliuofficial/UoE-retail-course/index><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/">home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href=https://github.com/perryliuofficial/UoE-retail-course/index>home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="catalog-page">custom designs</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="personal-service">personal service</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="testimonials">testimonials</a></li>
@@ -72,7 +72,7 @@
                         Company keeps its privacy policy under regular review and places any updates on this web page. This privacy policy was last updated on 9 January 2019.<br><br><strong>How to contact us</strong><br>If you have any questions about
                         Our Company’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us.Email us at:Call us:Or write to us at:<br><br><strong>How to contact the appropriate authority</strong><br>Should
                         you wish to report a complaint or if you feel that Our Company has not addressed your concern in a satisfactory manner, you may contact the Information Commissioner’s Office.Email:Address<br><br></p><a class="btn btn-primary" role="button"
-                        href="/" style="margin-top: 100px;">Back to Home Page</a></div>
+                        href=https://github.com/perryliuofficial/UoE-retail-course/index style="margin-top: 100px;">Back to Home Page</a></div>
             </div>
         </section>
     </main>
