--- a/404.html
+++ b/404.html
@@ -24,11 +24,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-dark clean-navbar">
-        <div class="container"><a class="navbar-brand text-white logo" href="/"><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-white logo" href=https://github.com/perryliuofficial/UoE-retail-course/index><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/">home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href=https://github.com/perryliuofficial/UoE-retail-course/index>home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="catalog-page">custom designs</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="personal-service">personal service</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="testimonials">testimonials</a></li>
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-dark">404: Page Not Found</h2>
-                    <p style="margin-right: 0px;margin-left: 0px;width: 100%;max-width: 100%;"></p><a class="btn btn-primary" role="button" href="/" style="margin-top: 100px;">Back to Home Page</a></div>
+                    <p style="margin-right: 0px;margin-left: 0px;width: 100%;max-width: 100%;"></p><a class="btn btn-primary" role="button" href=https://github.com/perryliuofficial/UoE-retail-course/index style="margin-top: 100px;">Back to Home Page</a></div>
             </div>
         </section>
     </main>
