--- a/my-account-designs.html
+++ b/my-account-designs.html
@@ -25,11 +25,11 @@
 <body id="page-top">
     <div id="wrapper">
         <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-dark clean-navbar">
-            <div class="container"><a class="navbar-brand text-white logo" href="/"><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand text-white logo" href=https://github.com/perryliuofficial/UoE-retail-course/index><img src="assets/img//logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Craig Banks Tailoring</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/">home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-light" href=https://github.com/perryliuofficial/UoE-retail-course/index>home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link text-light" href="catalog-page">custom designs</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link text-light" href="personal-service">personal service</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link text-light" href="testimonials">testimonials</a></li>
@@ -47,7 +47,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href=https://github.com/perryliuofficial/UoE-retail-course/index><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
