--- a/my-account.html
+++ b/my-account.html
@@ -117,7 +117,7 @@
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
                                         <div class="text-uppercase text-primary font-weight-bold text-xs mb-1"><span>Your saved designs</span></div>
-                                        <div class="text-dark font-weight-bold h5 mb-0"><span>18 &nbsp;&nbsp;</span><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="my-account-designs">&nbsp;View Designs</a></div>
+                                        <div class="text-dark font-weight-bold h5 mb-0"><span>18 &nbsp;&nbsp;</span><a class="btn btn-primary btn-sm" role="button" href="my-account-designs">&nbsp;View Designs</a></div>
                                     </div>
                                     <div class="col-auto"><i class="far fa-heart fa-2x text-gray-300"></i></div>
                                 </div>
@@ -130,7 +130,7 @@
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
                                         <div class="text-uppercase text-warning font-weight-bold text-xs mb-1"><span>Your appointments</span></div>
-                                        <div class="text-dark font-weight-bold h5 mb-0"><span>2 &nbsp;&nbsp;<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="my-account">&nbsp;View Appointments</a></span></div>
+                                        <div class="text-dark font-weight-bold h5 mb-0"><span>2 &nbsp;&nbsp;<a class="btn btn-primary btn-sm" role="button" href="my-account">&nbsp;View Appointments</a></span></div>
                                     </div>
                                     <div class="col-auto"><i class="fas fa-comments fa-2x text-gray-300"></i></div>
                                 </div>
@@ -143,7 +143,7 @@
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
                                         <div class="text-uppercase text-warning font-weight-bold text-xs mb-1"><span style="color: rgb(55,121,16);">Your pending orders</span></div>
-                                        <div class="text-dark font-weight-bold h5 mb-0"><span>1 &nbsp;&nbsp;<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="my-account">&nbsp;View Orders</a></span></div>
+                                        <div class="text-dark font-weight-bold h5 mb-0"><span>1 &nbsp;&nbsp;<a class="btn btn-primary btn-sm" role="button" href="my-account">&nbsp;View Orders</a></span></div>
                                     </div>
                                     <div class="col-auto"><i class="far fa-clipboard fa-2x text-gray-300"></i></div>
                                 </div>
