Minor content improvements

--- a/testimonials.html
+++ b/testimonials.html
@@ -46,12 +46,15 @@
                     <p>Want your testimonial featured here? Contact us!<br></p>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-md-6"><img class="img-thumbnail" src="https://picsum.photos/id/1005/500/300"></div>
+                    <div class="col-md-6"><img class="img-thumbnail" src="https://picsum.photos/id/1012/500/300"></div>
                     <div class="col-md-6">
-                        <h3>Priya Manda, Legal Intern</h3>
-                        <div class="getting-started-info">
-                            <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br></p>
-                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="catalog-page">Check Her Tailored Catalogue</a></div>
+                        <h3>Cameron Macleod, Graduate</h3>
+                        <div class="getting-started-info"><p>I&#39;ve never been a fashion-savy person with an infinite budget to experiment with. Thanks to Craig&#39;s immense <strong>expertise</strong>, I am now the proud owner of an <strong>affordable</strong> suit which helped me land several job interviews.<br /></p><hr/><p class="font-italic">Cameron was a fantastic chap to work with, and together we managed to pick a classic black suit with some quality cufflinks which suited his personal style. You can find the custom specifications for his suit via the button below.<br /></p>
+                            <blockquote class="blockquote">
+                                <p class="mb-0" style="font-size: 16px;"></p>
+                                <footer class="blockquote-footer">Craig</footer>
+                            </blockquote>
+                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="catalog-page">Check His Tailored Catalogue</a></div>
                 </div>
                 <div class="row" style="margin-top: 40px;">
                     <div class="col-lg-4">
@@ -83,12 +86,12 @@
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-md-6"><img class="img-thumbnail" src="https://picsum.photos/id/1012/500/300"></div>
+                    <div class="col-md-6"><img class="img-thumbnail" src="https://picsum.photos/id/1005/500/300"></div>
                     <div class="col-md-6">
-                        <h3>Cameron Macleod, Graduate</h3>
+                        <h3>Priya Manda, Legal Consultant</h3>
                         <div class="getting-started-info">
-                            <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br></p>
-                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="catalog-page">Check His Tailored Catalogue</a></div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br></p>
+                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="catalog-page">Check Her Tailored Catalogue</a></div>
                 </div>
                 <div class="row" style="margin-top: 40px;">
                     <div class="col-lg-4">
@@ -124,7 +127,7 @@
                     <div class="col-md-6">
                         <h3>Hannah Palmaeus, Graduate</h3>
                         <div class="getting-started-info">
-                            <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br></p>
                         </div><a class="btn btn-outline-primary btn-lg" role="button" href="catalog-page">Check Her Tailored Catalogue</a></div>
                 </div>
             </div>
