--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <main class="page landing-page">
-        <section id="page-top" class="clean-block clean-hero" style="background-image: url(&quot;assets/img/portfolio/craig.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;background-position: right;">
+        <section id="page-top" class="clean-block clean-hero" style="background-image: url(&quot;assets/img/portfolio/craig.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;background-position: center center;">
             <div class="text"><link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 <h1>
   <span
