--- a/personal-service.html
+++ b/personal-service.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <main class="page landing-page">
-        <section id="page-top" class="clean-block clean-hero" style="background-image: url(&quot;assets/img/portfolio/craig.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;background-position: right;">
+        <section id="page-top" class="clean-block clean-hero" style="background-image: url(&quot;assets/img/portfolio/craig.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;background-position: center center;">
             <div class="text">
                 <h2 style="font-size: 60px;">Hi! I'm Craig.</h2><a class="btn btn-outline-light btn-lg" role="button" href="#info1">Learn More About My Personal Service</a></div>
         </section>
