--- a/catalog-page.html
+++ b/catalog-page.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    <script type="text/javascript" src="https://cookiegenerator.eu/cookie.js?position=&amp;skin=cookielaw3&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%20and%20%5Burl%3Dhttps%3A%2F%2Fwww.perryliu.co.uk%2FUoE-retail-course%2Fprivacy-policy%5DPrivacy%20Policy%5B%2Furl%5D.&amp;accept_radius=100"></script>
 </head>
 
 <body>
