Revert "ios fixes"
This reverts commit bd847bcbb94de22287815ab7e412a8c5f8d57fb6.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="assets/css/pppstyle.css">
 <!--    <script type="text/javascript" src="https://cookiegenerator.eu/cookie.js?position=&amp;skin=cookielaw3&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%20and%20%5Burl%3Dhttps%3A%2F%2Fwww.perryliu.co.uk%2FUoE-retail-course%2Fprivacy-policy%5DPrivacy%20Policy%5B%2Furl%5D.&amp;accept_radius=100"></script>-->
 </head>
 
@@ -41,7 +40,7 @@
         </div>
     </nav>
     <main class="page landing-page">
-        <section id="page-top" class="clean-block clean-hero ppp-bg-one">
+        <section id="page-top" class="clean-block clean-hero" style="background-image: url(&quot;assets/img/portfolio/craig.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;background-position: center center;">
             <div class="text"><link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 <h1>
   <span
@@ -126,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <section class="clean-block clean-hero ppp-bg-two">
+        <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/header-bg.jpg&quot;);color: rgba(0,0,0,0.7);background-attachment: fixed;">
             <div class="text">
                 <h2 style="font-size: 60px;">Visit us on<br>45 Thistle Street,<br>Edinburgh, EH2 1DY<br></h2>
             </div>
